[gd_scene load_steps=8 format=3 uid="uid://dx0x5bjgqwsls"]

[ext_resource type="Script" path="res://UI/level_up.gd" id="1_hoq4c"]
[ext_resource type="Texture2D" uid="uid://dfclio626up4h" path="res://Assets/UI/level-up-prompt.png" id="1_rtv4o"]

[sub_resource type="Animation" id="Animation_i4b8a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1uk84"]
resource_name = "sparkle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 0, 1, 2, 1, 2, 0, 1, 2, 0]
}

[sub_resource type="Animation" id="Animation_4pxfa"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_u8aac"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [8, 7, 6, 5, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nctn2"]
_data = {
"RESET": SubResource("Animation_i4b8a"),
"close": SubResource("Animation_u8aac"),
"open": SubResource("Animation_4pxfa"),
"sparkle": SubResource("Animation_1uk84")
}

[node name="LevelUp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -687.0
offset_top = -506.0
offset_right = -687.0
offset_bottom = -506.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.64, 1.64)
script = ExtResource("1_hoq4c")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_rtv4o")
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nctn2")
}

[node name="starSpawn" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(227, 40)

[node name="StarSpawner" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1

[connection signal="timeout" from="StarSpawner" to="." method="_on_star_spawner_timeout"]
